network_policies/aks-store-demo/calico-clusterwide-cross-namespace.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: calico-clusterwide-cross-namespace
spec:
  selector: app == 'mongodb'
  types:
  - Ingress
  ingress:
  - action: Allow
    protocol: TCP
    source:
      selector: app == 'makeline-service'
    destination:
      ports:
      - 27017
