network_policies/aks-store-demo/calico-deny-all.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: calico-deny-all
  namespace: database-ns
spec:
  selector: all()
  types:
  - Ingress
  - Egress
  ingress: []
  egress: []
