network_policies/aks-store-demo/calico-egress-deny-vs-allow.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: calico-egress-deny-vs-allow
  namespace: backend-ns
spec:
  selector: app == 'makeline-service'
  types:
  - Egress
  egress:
  - action: Allow
    destination:
      namespaceSelector: kubernetes.io/metadata.name == 'database-ns'
      selector: app == 'mongodb'
  - action: Deny
    protocol: TCP
    destination:
      namespaceSelector: kubernetes.io/metadata.name == 'database-ns'
      selector: app == 'mongodb'
      ports:
      - 27017
