network_policies/aks-store-demo/calico-egress-deny.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: calico-egress-deny
  namespace: backend-ns
spec:
  selector: app == 'makeline-service'
  types:
  - Egress
  egress:
  - action: Allow
    destination:
      selector: app == 'product-service'
  - action: Deny
    protocol: TCP
    destination:
      selector: app == 'mongodb'
      ports:
      - 27017
