network_policies/aks-store-demo/calico-ingress-deny.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: calico-ingress-deny
  namespace: database-ns
spec:
  selector: app == 'mongodb'
  types:
  - Ingress
  ingress:
  - action: Allow
    protocol: TCP
    source:
      namespaceSelector: kubernetes.io/metadata.name == 'backend-ns'
      selector: app == 'order-service'
    destination:
      ports:
      - 27017
  - action: Deny
    protocol: TCP
    source:
      namespaceSelector: kubernetes.io/metadata.name == 'backend-ns'
      selector: app == 'makeline-service'
    destination:
      ports:
      - 27017
