network_policies/aks-store-demo/calico-pod-selector-egress-ingress.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: calico-pod-selector-egress-ingress
  namespace: backend-ns
spec:
  selector: app == 'makeline-service'
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
    source:
      selector: app == 'order-service'
  egress:
  - action: Allow
    destination:
      selector: app == 'product-service'
