network_policies/aks-store-demo/cilium-clusterwide-cross-namespace.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: cilium-clusterwide-label-only
spec:
  endpointSelector:
    matchLabels:
      app: mongodb
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: makeline-service
    toPorts:
    - ports:
      - port: "27017"
        protocol: TCP
