network_policies/aks-store-demo/cilium-deny-all.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cilium-deny-all
  namespace: database-ns
spec:
  endpointSelector: {}
