network_policies/aks-store-demo/cilium-egress-deny.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cilium-egress-deny
  namespace: backend-ns
spec:
  endpointSelector:
    matchLabels:
      app: makeline-service
  egress:
  - toEndpoints:
    - matchLabels:
        app: product-service
  egressDeny:
  - toEndpoints:
    - matchLabels:
        app: mongodb
    toPorts:
    - ports:
      - port: "27017"
        protocol: TCP
