network_policies/aks-store-demo/cilium-ingress-deny-vs-allow.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cilium-ingress-deny-vs-allow
  namespace: database-ns
spec:
  endpointSelector:
    matchLabels:
      app: mongodb
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: makeline-service
  ingressDeny:
  - fromEndpoints:
    - matchLabels:
        app: makeline-service
    toPorts:
    - ports:
      - port: "27017"
        protocol: TCP
