network_policies/aks-store-demo/namespace-selector-egress-without-ports.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: namespace-selector-egress
  namespace: backend-ns
spec:
  podSelector: {} # Applies to all pods in backend-ns
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: database-ns
