network_policies/aks-store-demo/pod-selector-egress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pod-selector-egress-ingress
  namespace: backend-ns
spec:
  podSelector:
    matchLabels:
      app: makeline-service
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: order-service
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: product-service
