network_policies/aks-store-demo/pod-selector-egress-port-mismatch.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pod-selector-egress-port-mismatch
  namespace: backend-ns
spec:
  podSelector:
    matchLabels:
      app: order-service
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: makeline-service
    ports:
    - protocol: TCP
      port: 9999 # Port mismatch: does not exist on makeline-service
