network_policies/aks-store-demo/pod-selector-egress-with-ports.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pod-selector-egress-with-ports
  namespace: backend-ns
spec:
  podSelector:
    matchLabels:
      app: order-service # The source pod initiating the traffic
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: makeline-service # The allowed destination pod
    ports:
    - protocol: TCP
      port: 3001 # Explicitly restricts egress to the destination's active port
