network_policies/aks-store-demo/pod-selector-ingress-port-mismatch.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pod-selector-ingress-port-mismatch
  namespace: backend-ns
spec:
  podSelector:
    matchLabels:
      app: product-service
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: order-service
    ports:
    - protocol: TCP
      port: 8888 # Port mismatch: product-service listens on 3002
