network_policies/aks-store-demo/pod-selector-ingress-with-ports.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pod-selector-ingress-with-ports
  namespace: backend-ns
spec:
  podSelector:
    matchLabels:
      app: makeline-service
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: order-service
    ports:
    - protocol: TCP
      port: 3001
