network_policies/aks-store-demo/pod-selector-ingress-without-ports.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pod-selector-ingress-without-ports
  namespace: backend-ns
spec:
  podSelector:
    matchLabels:
      app: makeline-service # The destination pod receiving the traffic
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: order-service # The allowed source pod
      # The 'ports' block is omitted on purpose to allow traffic on all ports
